<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">日新</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>
    <string name="comments">评论</string>
    <string name="loginhint">Student ID (请输入您的学号)</string>
    <string name="passwdhint">Password(默认密码为身份证后六位)</string>
    <string name="title_activity_main">main</string>
    <string name="UserName">请登录</string>
    <string name="StudentID">20122110120111</string>
    <string name="ScoreQuery">成绩查询</string>
    <string name="ClassQuery">课表查询</string>
    <string name="YKTQuery">一卡通查询</string>
    <string name="LibaryQuery">图书馆查询</string>
    <string name="MoonModel">夜间模式</string>
    <string name="setting">设置</string>
    <string name="scan">扫一扫</string>
    <string name="ActionBarTitle">我们都叫它什么鬼</string>
    <string name="title_activity_newscontent">新闻内容</string>
    <string name="newsContentTitle">点点你好</string>
    <string name="newsContentTag">杂文  随笔</string>
    <string name="newsContentAuthorTag">作者：</string>
    <string name="newsContentAuthor">点点</string>
    <string name="newsContentDateTag">发布日期：</string>
    <string name="newsContentDate">2014-11-08</string>
    <string name="title_activity_webview">日小新</string>
    <string name="pull_refresh">下拉可以刷新！</string>
    <string name="headImageInfo">这是你妹妹的点点</string>
    <string name="title_activity_scan">scan</string>
    <string name="loginText">Login</string>
    <string name="logoContentDescription">logo</string>
    <string name="loginDescription">login name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="load">加载中...</string>
    <string name="tab_change">测试滑动门</string>
    <string name="title_activity_new_login">New_login</string>
    <string name="soft_update_title">版本更新</string>
    <string name="soft_update_info">我们有新版本了，快更新吧！</string>
    <string name="soft_update_updatebtn">好的</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">更新中。。。</string>
    <string name="soft_update_cancel">取消</string>
    <string name="search">搜索</string>
    <string name="title_activity_new_main">NewMain</string>
    <string name="tool_bar_open">开</string>
    <string name="tool_bar_close">关</string>
    <string name="news_describle">image</string>
    <string name="title_activity_show_image_">Show_image_Activity</string>
    <string name="title_activity_tusho_show_card_activity">Tusho_show_card_activity</string>
    <string name="about_activity">AboutActivity</string>
    <string name="empty">没有获取到数据</string>
    <string name="introduce">       日新网APP开发小组精心打造，只为帮助你更好的了解，在花椒的点点滴滴。在这里，你可以看到：校内发生的各种大事小事、校内各个学院的精品专题活动介绍，还有，日新新闻出版中心以及日新视觉摄影工作室联合为你推出的日新图说。此外，还有各种便捷功能，等你来发现！</string>
    <string name="introduce2">日新出品，必属精品哦~</string>
    <string name="introduce3">后期Android开发&amp;设计</string>
    <string name="activity_setting_theme">主题设置</string>
    <string name="rxcommentsActivity">日新评论</string>
</resources>
