<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rx="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ecjtu.net.demon.activitys.newscontent">

    <TextView
        android:id="@+id/contet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newsContentTitle"
        android:textSize="@dimen/news_content_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/news_content_tag"
            android:layout_height="@dimen/news_content_tag"
            android:src="@drawable/tag" />

        <TextView
            android:id="@+id/content_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsContentTag" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/author_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newsContentAuthorTag" />

        <TextView
            android:id="@+id/content_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/author_tag"
            android:text="@string/newsContentAuthor" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/newsContentDate" />

        <TextView
            android:id="@+id/datetag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/date"
            android:text="@string/newsContentDateTag" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ecjtu.net.demon.view.articleView
            android:id="@+id/news_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            rx:image_height="100dp"
            rx:image_margin="10dp"
            rx:image_width="350dp"></ecjtu.net.demon.view.articleView>
    </ScrollView>


</LinearLayout>
